SET(MOCHIWEB_VERSION "1.4.1")
SET(MOCHIWEB_INSTALL_PREFIX ${CMAKE_ERL_LIB_INSTALL_PREFIX}/mochiweb-${MOCHIWEB_VERSION})

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/src/mochiweb.app.src
               ${CMAKE_CURRENT_BINARY_DIR}/mochiweb.app)

INSTALL(DIRECTORY ${COUCHDB_DEFAULT_LIB_DIR}/mochiweb/ebin
        DESTINATION ${MOCHIWEB_INSTALL_PREFIX})
