FILE(GLOB SRC *.erl)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/snappy.app.in
               ${CMAKE_CURRENT_BINARY_DIR}/snappy.app)


SET(COUCH_VIEW_SNAPPY_SRC snappy_nif.cc)
SET(COUCH_SNAPPY_VERSION "1.0.4")
SET(COUCH_SNAPPY_PREFIX ${CMAKE_ERL_LIB_INSTALL_PREFIX}/snappy-${COUCH_SNAPPY_VERSION})
SET(COUCH_SNAPPY_EBIN_PREFIX ${COUCH_SNAPPY_PREFIX}/ebin)
SET(COUCH_SNAPPY_PRIV_PREFIX ${COUCH_SNAPPY_PREFIX}/priv)

INCLUDE_DIRECTORIES(BEFORE ${SNAPPY_INCLUDE_DIR}
                           ${ERLANG_INCLUDE_PATH})

ADD_LIBRARY(snappy_nif MODULE ${COUCH_VIEW_SNAPPY_SRC})
SET_TARGET_PROPERTIES(snappy_nif PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(snappy_nif ${COUCHBASE_UNRESOLVED}
                                 ${SNAPPY_LIBRARIES}
                                 ${COUCHBASE_MATH_LIBS})

SET_TARGET_PROPERTIES(snappy_nif PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/priv"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/priv"
)

ERL_BUILD("snappy" ${SRC})

INSTALL(TARGETS snappy_nif
        DESTINATION ${COUCH_SNAPPY_PRIV_PREFIX})

INSTALL(FILES ${outfiles}
              ${CMAKE_CURRENT_BINARY_DIR}/snappy.app
        DESTINATION ${COUCH_SNAPPY_EBIN_PREFIX})
